@@ -170,6 +170,7 @@ typedef enum cairo_format {
     CAIRO_FORMAT_A1
 } cairo_format_t;
 
+/* XXX: Need to add cairo_set_target_image_data */
 void
 cairo_set_target_image (cairo_t	*cr,
 			char		*data,
@@ -773,6 +774,14 @@ cairo_image_surface_create_for_data (char			*data,
 				     int			height,
 				     int			stride);
 
+void
+cairo_image_surface_get_data (cairo_surface_t	*surface,
+			      char		**data,
+			      cairo_format_t	*format,
+			      int		*width,
+			      int		*height,
+			      int		*stride);
+
 /* Pattern creation functions */
 cairo_pattern_t *
 cairo_pattern_create_for_surface (cairo_surface_t *surface);
@@ -785,7 +794,7 @@ cairo_pattern_t *
 cairo_pattern_create_radial (double cx0, double cy0, double radius0,
 			     double cx1, double cy1, double radius1);
 
-void
+cairo_pattern_t *
 cairo_pattern_reference (cairo_pattern_t *pattern);
 
 void
